# qst-backend-go

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appopt.cpp  appopt.h  client.cpp  compile_commands.json  core.h  go.mod  go.sum  gorm.db  main.cpp  main.go  qst_core.cpp  trie.hpp
app/: appinfo.h
comm/: qst.grpc.pb.cc  qst.grpc.pb.h  qst.pb.cc  qst.pb.h
config/: config.go
core/: core.hpp
help/: helper.cpp  helper.h
protos/: qst.proto
server/: server.hpp
src/: CMakeLists.txt  appinfo.cpp  appinfo.hpp  core.cpp  core.h  core.hpp  def.h  main.cpp  process.h  trie.hpp
src/appinfo/: CMakeLists.txt  appinfo.c  appinfo.cpp  appinfo.h  trie.hpp
src/process/: processmanager.cpp  processmanager.h
src/processmanager/: CMakeLists.txt  processmanager.cpp  processmanager.h
tree/: trie.h
trie/: trie.go
